--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@
    align-items: center;
    margin-bottom: 1rem;
    position: relative;
-   width: 400px;
+   width: 100%;
 }
 
 .component-item img {
