--- a/css/navbar.css
+++ b/css/navbar.css
@@ -41,6 +41,7 @@ header ul,
 /* ====================> MENU <===================== */
 header {
    justify-content: space-between;
+   background: white;
 }
 
 header a {
@@ -103,6 +104,11 @@ header ul img {
    transform: translateY(25%);
    transition: 0.3s;
    z-index: 10;
+}
+
+#hamburguer.fixed {
+   position: fixed;
+   right: 20px;
 }
 
 #hamburguer.animate {
